[package]
name = "on1giri_mass_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["cookies", "json"]}
serde = {version = "1.0.199", features = ["derive", "std"]}
clap = { version = "4.5.4", features = ["derive"] }
log = "0.4.21"
chrono = { version = "0.4.38", features = ["serde"]}
random_word = {version = "0.4.3", features = ["fr"] }
rand = "0.8.5"
serde_json = "1.0.117"
env_logger = "0.11.3"
futures = "0.3.30"
